# low-cost-service-robot

./: .gitignore  ENVIRONMENT.md  README.md  gazebo_scene.yaml  setup_workspace.sh  smoke_test.sh
small_brain/: CMakeLists.txt  package.xml
small_brain/aws-robomaker-small-warehouse-world/: README.md
small_brain/aws-robomaker-small-warehouse-world/worlds/: no_roof_small_warehouse.world
small_brain/config/: sim_controllers.yaml
small_brain/config/nav/: base_global_planner_param.yaml  costmap_common_params.yaml  (+7 more)
small_brain/launch/: 2d_lidar_map_rviz.launch  2d_lidar_map_view.rviz  2d_lidar_mapping_test.launch  3d_mapping.launch  3d_navigation.launch  ego_navigation.launch  jp515_lidar_rtab_map_rviz.launch  jp515_lidar_rtab_map_view.rviz  jp515_lidar_rtab_mapping_test.launch  map_rviz.launch  map_rviz_light.launch  map_view.rviz  map_view_light.rviz  mec_six_arm_house.launch  mec_six_arm_house_lidar_test.launch  mec_six_arm_warehouse.launch  moveit_rviz_only.launch  robot_clean.rviz  robot_display.launch  sim_pick.launch  simple_robot.rviz  simple_rviz.launch
small_brain/scripts/: arm_pose_tuner.py  arm_task_server.py  async_cloud_merger.py  flip_cmd_vel.py  gripper_init.py  ground_truth_tf.py  joint_state_bridge.py  manual_semantic_annotator.py  render_gazebo_scene_topdown.py  render_rtabmap_cloud_3d.py  render_rtabmap_cloud_overlay.py  render_semantic_map_overlay.py  send_mark.py  sim_pick.py  static_map_generator.py  teleop_key.py
small_brain/src/: block_follower_plugin.cpp
small_brain/urdf/: mini_mec_six_arm_sim.urdf  mini_mec_six_arm_sim_lidar_test.urdf
(+125 files in other folders)
